--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=myLOG
-version=2.2
-author=Guy Dvir
-maintainer=Guy Dvir <guydvir.tech@gmail.com>
-sentence=Sore Falsh log on ESP8266, ESP32
-paragraph= Nothing smart
-category=Communication
-url=https://github.com/guydvir2/myLOG.git
-architectures=esp8266
+name = myLOG
+version = 2.2
+author = Guy Dvir
+maintainer = Guy Dvir <guydvir.tech@gmail.com>
+sentence = Store Falsh log on ESP8266, ESP32
+paragraph = Nothing smart
+category = Communication
+url = https://github.com/guydvir2/myLOG.git
+architectures = esp8266, esp32
