--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:d1_mini]
-platform = espressif8266
+[env:espressif32, espressif32]
+platform = espressif8266, espressif32
 board = d1_mini
 framework = arduino
 lib_deps =
